compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__alternative_patterns_list.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
assertion_line: 187
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [1] | [1, 2] -> 0\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) -> Int {
  case xs {
    [1] | [1, 2] -> 0
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
export function main(xs) {
  if (xs.hasLength(1) && xs.head === 1) {
    return 0;
  } else if (xs.hasLength(2) && xs.head === 1 && xs.tail.head === 2) {
    return 0;
  } else {
    return 1;
  }
}
