compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__constant.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
assertion_line: 161
expression: "pub fn main(xs) {\n  case xs {\n    #(x) if x == 1 -> x\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE
pub fn main(xs) {
  case xs {
    #(x) if x == 1 -> x
    _ -> 0
  }
}


----- COMPILED JAVASCRIPT
export function main(xs) {
  if (xs[0] === 1) {
    let x = xs[0];
    return x;
  } else {
    return 0;
  }
}
