compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__constructor_function_in_guard.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "fn func(x) {\n    case [] {\n        _ if [] == [ Ok ] -> True\n        _ -> False\n    }\n}\n    "
---
----- SOURCE CODE
fn func(x) {
    case [] {
        _ if [] == [ Ok ] -> True
        _ -> False
    }
}
    

----- COMPILED JAVASCRIPT
import { Ok, toList, isEqual } from "../rakun.mjs";

function func(x) {
  let $ = toList([]);
  if (isEqual(toList([]), toList([(var0) => { return new Ok(var0); }]))) {
    return true;
  } else {
    return false;
  }
}
