compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__case_clause_guards__custom_type_constructor_imported_and_aliased.snap
---
source: compiler-core/src/javascript/tests/case_clause_guards.rs
expression: "import other_module.{A as B}\nfn func() {\n  case B {\n    x if x == B -> True\n    _ -> False\n  }\n}\n"
---
import * as $other_module from "../../package/other_module.mjs";
import { A as B } from "../../package/other_module.mjs";
import { isEqual } from "../rakun.mjs";

function func() {
  let $ = new B();
  if (isEqual($, new B())) {
    let x = $;
    return true;
  } else {
    return false;
  }
}
